<resources>
    <string name="app_name">The Clothing Application</string>
    <string name="the_clothing_store">The Clothing Store</string>
    <string name="signup">Signup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="Rs">\u20B9</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="new_born">New Born</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="my_clothing_application">My Clothing Application</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="categories">Categories</string>
    <string name="all_products">All Products</string>
    <string name="my_cart">My Cart</string>
    <string name="home">Home</string>
    <string name="remove">Remove</string>
</resources>