<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_men"
                android:title="@string/men" />
            <item
                android:id="@+id/nav_women"
                android:title="@string/women" />
            <item
                android:id="@+id/nav_kids"
                android:title="@string/kids" />
            <item
                android:id="@+id/nav_new_born"
                android:title="@string/new_born" />
        </group>

    <item android:title="@string/user">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>